<resources>
    <string name="app_name">Lazybones Recipes</string>
    <string name="app_logo_description">App logo image of a sloth</string>
    <string name="title_activity_main_view">MainViewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="exit">Exit</string>
    <string name="searchRecipes">Search Recipes</string>
    <string name="login_page_title">Lazybones Login</string>
    <string name="account_creation_page_title">Lazybones Account Creation</string>
    <string name="Search_page_title">Lazybone Search</string>
    <string name="main_menu">Main Menu</string>
    <!-- Admin strings -->
    <string name="admin_delete_all_users">Delete All Users</string>
    <string name="admin_delete_all_recipes">Delete All Recipes</string>
    <string name="admin_delete_comments_on_recipe">Delete All Comments On Recipe</string>
    <string name="admin_delete_user">Delete User</string>
    <string name="admin_delete_recipe">Delete Recipe</string>
    <string name="admin_single_recipe_user_action">Actions On Single Recipe / User</string>
    <string name="admin_all_recipes_users_actions">Actions On All Recipes / Users</string>
    <string name="recipe_id_user_username">Recipe ID / Username</string>
    <string name="admin_feedback_noRecipeID">Please specify recipe ID.</string>
    <string name="admin_feedback_recipeIDFormatError">Please specify an appropriate recipe ID.</string>
    <string name="admin_feedback_noRecipeMatchingID">No recipe matching specified ID.</string>
    <string name="admin_feedback_commentsOnRecipeDeletedSuccessfully">Comments deleted successfully.</string>
    <string name="admin_feedback_recipesDeletedSuccessfully">Recipes deleted successfully.</string>
    <string name="admin_feedback_usersDeletedSuccessfully">Users deleted successfully.</string>
    <string name="admin_feedback_noUsername">Please specify a username.</string>
    <string name="admin_feedback_noMatchingUsername">No user matching specified username.</string>
    <string name="admin_feedback_userDeletedSuccessfully">User deleted successfully.</string>
    <string name="admin_feedback_recipeDeletedSuccessfully">Recipe deleted successfully.</string>
    <!-- Submit recipe strings -->
    <string name="submit_recipe_name">Name</string>
    <string name="submit_recipe_name_hint">Recipe name</string>
    <string name="submit_recipe_instructions">Instructions</string>
    <string name="submit_recipe_instructions_hint">Recipe instructions</string>
    <string name="submit_recipe_ingredients">Ingredients</string>
    <string name="submit_recipe_ingredients_add">Add</string>
    <string name="submit_recipe_ingredients_remove">Remove</string>
    <string name="submit_recipe_ingredients_submit">Submit</string>
    <string name="submit_recipe_image_select">Select image</string>

</resources>